# cpp-template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindNCCL.cmake
src/: main.cpp
src/util/: check.h  error.h  nccl.cpp  nccl.h  print.cuh  print_test.cu  util.cpp  util.h  util_test.cpp  vectorization.h  vectorization_test.cpp
src/version/: version.h.in
